feat(news-site): disable 'math' option to avoid loading unused third-party js/css files

--- a/news-site/config.toml
+++ b/news-site/config.toml
@@ -37,7 +37,7 @@ pygmentscodefencesguesssyntax = true
 	listAuthor = true
 
 	# Add math typesetting with KaTeX (Global with this Param)
-	math = true
+	math = false
 
 	# Optional 80x80 avatar image.
 	#avatar = "/img/vitae.jpg"
