--- a/news-site/config.toml
+++ b/news-site/config.toml
@@ -5,7 +5,7 @@ theme = "hugo-vitae"
 paginate = 10
 enableRobotsTXT = true
 
-copyright = "[Panz3r](https://github.com/panz3r) 2020 | [Vitae](https://github.com/dataCobra/hugo-vitae) theme for [Hugo](https://gohugo.io)"
+copyright = "[Panz3r](https://github.com/panz3r) 2020 | [Vitae](https://github.com/panz3r/hugo-vitae) theme for [Hugo](https://gohugo.io)"
 
 pygmentsstyle = "colorful"
 pygmentscodefences = true
