--- a/news-site/config.toml
+++ b/news-site/config.toml
@@ -43,7 +43,7 @@ pygmentscodefencesguesssyntax = true
 	#avatar = "/img/vitae.jpg"
 
 	# Optional favicons for website
-	#favicon = true
+	favicon = true
 
 	# Add list of sections that should show up on the homepage
   mainSections = ["post"]
